tests/should_fail/helpers/circular_a_helper.module
-- Module A that imports module B
let b = import("./circular_b_helper.module")
